# sinusgraph_test

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3_back  db.sqlite3_backk  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test-authz-config.json
auth/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
kcloak/: request.py
mygraph/: admin.py  apps.py  models.py  schema.py
mygraph/fixtures/: books.json
mygraph/migrations/: 0001_initial.py  0002_rename_books_book.py
