[tool.poetry]
name = "sinusgraph"
version = "0.1.0"
description = ""
authors = ["d.shapovalov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
django = "^4.1.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.4.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
djangorestql = "^1.0.1"
graphene-django = "^3.0.0"
python-keycloak = "^2.14.0"

djangorestframework-simplejwt = "^5.2.2"
django-uw-keycloak = "^2.0.2"
django-keycloak-auth = "^0.9.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
django-extensions = "^3.2.1"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
